// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render with name 1`] = `
<span
  className="fa fa-fire"
  title={null}
/>
`;

exports[`Icon should render with name and className 1`] = `
<span
  className="fa fa-fire"
  title={null}
/>
`;

exports[`Icon should render with name and inText 1`] = `
<span
  className="sc-bdVaJa bTpFHL"
>
  <span
    className="fa fa-fire"
    title={null}
  />
</span>
`;

exports[`Icon should render with name and title 1`] = `
<span
  className="fa fa-fire"
  title="Fire"
/>
`;
